sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:2: error: illegal start of simple pattern
def cocktailSort() { val = getNombreValeurs() -2
                         ^AlgCocktailSort1:3: error: '=' expected but ';' found.
                     for (i <- 0 to n) { 5
^