sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() { val = getNombreValeurs() -2
                     for (i <- 0 to n) { 5
                                             
                                }
                   }